@@ -4,6 +4,8 @@
 
 Gora Change Log
 
+* GORA-232 DataStoreTestBase should delegate all functionality to DataStoreTestUtil (Apostolos Giannakidis via lewismc)
+
 * GORA-259 Removal of the main methods from the test case classes (Apostolos via hsaputra)
 
 * GORA-229 Use @Ignore for unimplemented functionality to identify absent tests (Apostolos Giannakidis via lewismc)
